--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -165,8 +165,8 @@ We then consider the implications for understanding forest responses to global c
 
 ## 1. The biophysical environment
 
-The biophysical environment, defined here to include the physical structure of the vegetation and associated physical conditions, varies vertically from the forest floor to the top of the canopy (Figs. `r fig_schematic`, `r fig_NEON_vertical`), with physical conditions largely determined by forest structure.
-In this section, we review of the existing literature and analyze data on vegetation structure and vertical microclimate profiles from focal sites within the U.S. National Ecological Observatory Network (NEON; Fig. `r fig_NEON_vertical`, Supporting Information Methods `r appendix_NEON_methods`, Supporting Information Figure `r SIfig_NEON_all`).
+The biophysical environment, defined here to include the physical structure of the vegetation and associated micrometeorological conditions, varies vertically from the forest floor to the top of the canopy (Figs. `r fig_schematic`, `r fig_NEON_vertical`), with micrometeorological conditions largely determined by forest structure.
+In this section, we review of the existing literature and analyze data on vegetation structure and vertical microclimate profiles from forested sites within the U.S. National Ecological Observatory Network (NEON; Fig. `r fig_NEON_vertical`, Supporting Information Methods `r appendix_NEON_methods`, Supporting Information Figure `r SIfig_NEON_all`).
 Although we focus on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer edge of vegetation than to height [@lowmanForestCanopies1995]. 
 
 ![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites in the National Ecological Observatory Network (NEON)**. Height profiles, normalized relative to the top of the canopy, are shown for: growing season (a) modelled leaf area density, (b) estimated proportion of sun leaves, and (c) proportion of light incident to the top of the canopy (as fraction relative to to top of canopy), and for July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity (min RH), (g) maximum air temperature ($T_{air}$), and (h) maximum biological temperature, ($T_{bio}$). Measurements extend from ground level (normalized height = 0 m) to the top of the canopy (horizontal dashed line at normalized height = 1) or above (d-g). Variables shown in panels a-c are derived from lidar, and those shown in panels d-h from micrometeorological tower data. Sites, which represent a variety of forest structures, include a mixed northern hardwood forest (Harvard Forest, MA; HARV), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), a tropical montane broadleaf evergreen forest (Pu'u Maka'ala Natural Area Reserve, Hawai'i; PUUM), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Further site information is given in Supporting Information Table `r NEON_sites`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`. Vertical profiles in micrometeorological variables (d-h) at all forested NEON sites are shown in Supporting Information Figure `r SIfig_NEON_all`.](NEON_height_profiles/figures/Fig2_normalized.png)
@@ -175,32 +175,32 @@ Although we focus on vertical gradients, it is important to note that in heterog
 
 Canopy foliage is the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions from large fluctuations in conditions experienced above the canopy. It strongly influences -- and is influenced by -- the vertical biophysical gradient.
 Vertical patterns in leaf area density (*i.e.*, leaf area per unit volume) differ across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
-In tropical and temperate forests with dense broadleaf canopies, leaf area density is generally highest in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often high as well, sometimes causing undulating patterns with height [<!--e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,--><!--@terborghVerticalComponentPlant1985;--> @parkerVerticalProfileCanopy1989; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993;  @dominguesParameterizationCanopyStructure2005]. 
-In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be greatest in the lower canopy or understory [<!--e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a,--> @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020; @lawLeafAreaDistribution2001;@bonan_ecological_2016]. 
-Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkAmazonForestCarbon2012; @hanberryOpenForestEcosystems2020]. 
-In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [<!--@parkerStructuralPhenologyLeaf2004;--> @parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017; @nunesForestFragmentationImpacts2022]. 
-In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
+In tropical and temperate forests with dense broadleaf canopies, leaf area density is generally highest in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often high as well, sometimes causing undulating patterns with height [<!--e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,--><!--@terborghVerticalComponentPlant1985;-->@parkerVerticalProfileCanopy1989; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @dominguesParameterizationCanopyStructure2005]. 
+In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be greatest in the lower canopy or understory [<!--e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a,-->@baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020; @lawLeafAreaDistribution2001;@bonan_ecological_2016]. 
+Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [@bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkAmazonForestCarbon2012; @hanberryOpenForestEcosystems2020]. 
+In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [<!--@parkerStructuralPhenologyLeaf2004;-->@parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017; @nunesForestFragmentationImpacts2022]. 
+In this review, we focus on growing season conditions unless otherwise noted.
 
 ### 1.2 Light
 
-The intensity of visible and photosynthetically active radiation (PAR, 400-700nm) decreases from the canopy top to the forest floor, with a profile whose shape is modified by leaf area density, leaf clumping, canopy height, and vertical structure across species and forest types [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @belandVerticalStructureHeterogeneity2021; @koike_leaf_2001; @binLeafTraitExpression2022].
+The intensity of visible and photosynthetically active radiation (PAR, 400-700nm) decreases from the canopy top to the forest floor, with a profile whose shape is modified by leaf area density, leaf clumping, canopy height, and vertical structure across species and forest types [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001; @belandVerticalStructureHeterogeneity2021;  @binLeafTraitExpression2022].
 Canopy foliage absorbs a large portion of PAR (400-700nm), and selectively filters light, thereby altering the spectrum of PAR creceived in the lower canopy and understory layers. 
-The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along qith total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation [700-1000 nm; @decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
+The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along qith total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation [700-1000 nm, @decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
 This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests, than in forests with more open upper canopies, including many conifer forests [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 This light gradient drives variation in leaf temperature (section 2), traits (section 3), and photosynthesis (section 4.2).
 
 ### 1.3 Turbulent transport and wind
-Vertical transport in forest canopies is dominated by turbulent transport, making vertical profiles of wind speed, water vapor, CO~2~, and temperature more difficult to predict and to generalize on the basis of theoretical first principles compared to radiation profiles. 
+Vertical transport in forest canopies is dominated by turbulent transport, making vertical profiles of wind speed, water vapor, CO~2~, and temperature more difficult to predict and to generalize on the basis of theoretical first principles than radiation profiles. 
 Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients [eddy diffusivities, @penmanWeatherWheatEssay1960]-- such that wind speed declines logarithmically with proximity to the canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. 
-Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988].
-Within canopies, however, transport often fails to mimic diffusion – e.g., transport of momentum [@shawSecondaryWindSpeed1977] or heat [@raupachLagrangianAnalysisScalar1987] may occur in the direction opposite to that predicted by gradients of wind speed or temperature, respectively – making vertical wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007].
+Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [@raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988].
+Within canopies, however, transport often fails to mimic diffusion – e.g., transport of momentum [@shawSecondaryWindSpeed1977] or heat [@raupachLagrangianAnalysisScalar1987] may occur in the direction opposite to that predicted by gradients of wind speed or temperature, respectively – making vertical wind profiles difficult to generalize from first principles [@denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007].
 Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. 
 These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
 
 Despite these complexities of within-canopy transport, wind speeds are generally much higher at the top of the canopy than within or beneath [@juckerCanopyStructureTopography2018; @jiao-junWindProfilesTrees2004].
-This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVerticalinpress]. 
-Thus, upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat exchange (sections 2, 4.1).
+This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016; <!--@mcgregorTreeHeightLeaf2021;-->@juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVerticalinpress]. 
+As a result, upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat exchange (sections 2, 4.1).
 
 ### 1.4 Atmospheric concentrations of CO~2~ and water vapor
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. 
@@ -208,10 +208,10 @@ Vertical CO~2~ concentration gradients can drive gradients in the ratio of leaf 
 Particularly, understory seedlings benefit from elevated CO~2~ by having higher rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. 
 However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations concentrations likely have little effect on energy balance and metabolism across the vertical gradient.
  
-Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021; @binLeafTraitExpression2022].
+Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021; @binLeafTraitExpression2022].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
 In combination with $T_{air}$ and $T_{leaf}$, RH determines leaf-to-air vapor pressure deficit (VPD) -- the driving force of water loss from leaves -- which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
-Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
+Especially when canopy height and leaf area index (LAI) are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
 The implication is that upper canopy leaves have higher $g_b$ and associated potential for water and heat loss (sections 2, 4.1).
 
 ### 1.5 Air temperature 
@@ -262,7 +262,7 @@ Early work attributed differences among leaves to sun versus shade [@wyliePrinci
 More recent work has extended the focus from light alone to leaf height, as the latter shapes differences in leaf structure and function that can partially mitigate the effects of gravity and hydraulic pathlength on leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022].
 Thus, leaves develop differently according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of branch ontogenetic stage [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; @niinemetsVariabilityLeafMorphology2015].
-Plasticity throughout the canopy may emerge when development of new leaves is influenced by information from adjacent mature leaves or apical meristems, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
+Plasticity throughout the canopy may emerge when development of new leaves is influenced by information from adjacent mature leaves or apical meristems, including a “memory” of previous conditions in that location, and may also acclimate during and after expansion to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
 Overall, leaves may optimize their biochemistry, anatomy and structure for their local conditions [@lloydOptimisationPhotosyntheticCarbon2010; @buckleyOptimalCarbonPartitioning2021; @hikosakaOptimalNitrogenDistribution2014; @kitaoCanopyNitrogenDistribution2018; @niinemetsPhotosynthesisResourceDistribution2007]. 
 Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
 Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004; @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. 
@@ -544,7 +544,7 @@ Thus, while canopy trees are probably more vulnerable to mortality from distinct
 ### Canopy disturbance
 
 Rising temperatures and severe droughts place canopy trees at particularly elevated risk of mortality. 
-Large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change [@ipccClimateChange20212021], and they are also targeted by selective logging [e.g., @millerReducedImpactLogging2011]. 
+Large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change [@ipccClimateChange20212021], and they are also targeted by selective logging [@millerReducedImpactLogging2011]. 
 Increasing severity and frequency of heat waves, accompanied with increases in VPD and ET, can exacerbate effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases radiation and temperatures within the forest [@juckerCanopyStructureTopography2018; @starkReframingTropicalSavannization2020]. 
@@ -556,7 +556,7 @@ Such dynamics will likely to be amplified by warming, such that climate change i
 Canopy disturbance poses an increasing threat to the biodiversity of understory species that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013a; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020].
 In the understory, warming disproportionately affects less thermally-adapted plant species, causing thermophilization of the plant community [@zellwegerForestMicroclimateDynamics2020b; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019].
-If compositional shifts towards more thermally-adapted species fail to keep pace with warming, the ecosystem-level resilience to canopy disturbance that is often provided by smaller trees [e.g.,  @millerReducedImpactLogging2011] will be destroyed, resulting in breakdown of canopy structure and the potential state changes described above.
+If compositional shifts towards more thermally-adapted species fail to keep pace with warming, the ecosystem-level resilience to canopy disturbance that is often provided by smaller trees [e.g., @millerReducedImpactLogging2011] will be destroyed, resulting in breakdown of canopy structure and the potential state changes described above.
 
 ## Scaling across space and time 
 
