revise paragraph on CO2 gradients
#114

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -203,10 +203,8 @@ This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, S
 As a result, upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat exchange (sections 2, 4.1).
 
 ### 1.4 Atmospheric concentrations of CO~2~ and water vapor
-Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. 
-Vertical CO~2~ concentration gradients can drive gradients in the ratio of leaf intercellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$) calculated from $\delta^{13}C$, and in rates of refixation of respired CO~2~ vertically, both of which tend to be higher at lower heights (Table 1). 
-Particularly, understory seedlings benefit from elevated CO~2~ by having higher rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. 
-However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations concentrations likely have little effect on energy balance and metabolism across the vertical gradient.
+Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, but the elevated CO~2~ quickly dissipates during the day such that differences are negligible for most of the day when photosynthesis is occurring [@koike_leaf_2001; @yang_spatial_1999; @brooksVerticalGradientsPhotosynthetic1997]. 
+While understory seedlings may benefit modestly from higher CO~2~ concentrations near the ground during some parts of the day [e.g., 6% of C fixation from recently respired CO~2~; @brooksVerticalGradientsPhotosynthetic1997], gradients in CO~2~ concentrations concentrations likely have little effect on energy balance and metabolism of trees across the vertical gradient [@brooksVerticalGradientsPhotosynthetic1997]. 
  
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021; @binLeafTraitExpression2022].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
