--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -58,7 +58,7 @@ SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological c
 
 #Word count
 w_intro=369
-w_biophys=1548
+w_biophys=1515
 w_tleaf=736
 w_traits= 2460
 w_met=1000
@@ -206,14 +206,14 @@ As a result, upper canopy leaves have substantially higher boundary layer conduc
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, but the elevated CO~2~ quickly dissipates during the day such that differences are negligible for most of the day when photosynthesis is occurring [@koike_leaf_2001; @yang_spatial_1999; @brooksVerticalGradientsPhotosynthetic1997]. 
 While understory seedlings may benefit modestly from higher CO~2~ concentrations near the ground during some parts of the day [e.g., 6% of C fixation from recently respired CO~2~; @brooksVerticalGradientsPhotosynthetic1997], gradients in CO~2~ concentrations concentrations likely have little effect on energy balance and metabolism of trees across the vertical gradient [@brooksVerticalGradientsPhotosynthetic1997]. 
  
-Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021; @binLeafTraitExpression2022].
+Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, @juckerCanopyStructureTopography2018; <!--@mcgregorTreeHeightLeaf2021;-->@binLeafTraitExpression2022].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
 In combination with $T_{air}$ and $T_{leaf}$, RH determines leaf-to-air vapor pressure deficit (VPD) -- the driving force of water loss from leaves -- which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
 Especially when canopy height and leaf area index (LAI) are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
 The implication is that upper canopy leaves have higher $g_b$ and associated potential for water and heat loss (sections 2, 4.1).
 
 ### 1.5 Air temperature 
-Vertical gradients in air temperature ($T_{air}$) differ widely (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`) and depend on factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021; @zellweger_seasonal_2019]. 
+Vertical gradients in air temperature ($T_{air}$) vary widely (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`), depending on factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021; @zellweger_seasonal_2019]. 
 Commonly, attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTempSubcanopyMicroclimate2021a; @zellweger_seasonal_2019].
 Diel temperature range is typically smaller beneath dense canopies than above, resulting from lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings [<!-- @missonPartitioningForestCarbon2007--> @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; <!--@defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019--> @zellweger_seasonal_2019 <!--@ramboCanopyMicroclimateResponse2009; @binLeafTraitExpression2022; @haesenForestTempSubcanopyMicroclimate2021a; @meeussenMicroclimaticEdgetointeriorGradients2021-->]. 
 Notably, buffering against high maximum daytime $T_{air}$ becomes weaker and can be reversed as canopies become more open [Supporting Information Figure `r SIfig_NEON_all`,@curtis_intracanopy_2019; @meeussenMicroclimaticEdgetointeriorGradients2021]. 
