--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -59,7 +59,7 @@ SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological c
 #Word count
 w_intro=369
 w_biophys=1515
-w_tleaf=736
+w_tleaf=749
 w_traits= 2460
 w_met=1000
 w_ecol=1353
@@ -222,13 +222,13 @@ These usually-modest gradients in $T_{air}$ combine with the above-described gra
 
 ## 2. Leaf temperature 
 
-$T_{leaf}$ is strongly tied, and usually within a few degrees of, $T_{air}$ [@drakeNoEvidenceHomeostatic2020;@rey-sanchez_spatial_2016], but can be substantially warmer or cooler under certain conditions [@rey-sanchez_spatial_2016;@doughtyAreTropicalForests2008;@vogelLeavesLowestHighest2009]. 
-Deviation of $T_{leaf}$ from $T_{air}$ is influenced by other micrometeorological drivers and by leaf traits and stomatal conductance (Fig. `r fig_leaf_T`; Note `r Notes_leafTbiophysics`), all of which vary across forest vertical gradients (Fig. `r fig_schematic`).
-High radiation in the upper canopy (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves often have higher $T_{leaf}-T_{air}$, and thus are often warmer than understory leaves (Fig. `r fig_leaf_T`a).
+$T_{leaf}$ is strongly tied to, and usually within a few degrees of, $T_{air}$ [@drakeNoEvidenceHomeostatic2020;@rey-sanchez_spatial_2016], but can be substantially warmer or cooler under certain conditions [Note `r Notes_leafTbiophysics`,@doughtyAreTropicalForests2008;@rey-sanchez_spatial_2016;@vogelLeavesLowestHighest2009]. 
+Deviation of $T_{leaf}$ from $T_{air}$ is influenced by other micrometeorological drivers and by leaf traits and stomatal conductance ($g_s$; Fig. `r fig_leaf_T`; Note `r Notes_leafTbiophysics`), all of which vary across forest vertical gradients (Fig. `r fig_schematic`).
+High radiation in the upper canopy implies that upper canopy leaves often have higher $T_{leaf}-T_{air}$, and thus are often warmer than understory leaves (Fig. `r fig_leaf_T`a).
 However, higher wind speeds reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
-In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
-In contrast, in the lower canopy, greater RH and lower wind speeds may limit $\lambda E$ (through reduced VPD and $g_b$), increasing $T_{leaf}$ [@perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
-Leaves in these normally-shaded locations experience rapid light and temperature surges during sunflecks [>10$^\circ$C; @waySunflecksTreesForests2012].
+In addition, adaptive leaf traits that increase $g_s$ and $g_b$, such as small size and high stomatal density (Note `r Notes_leafTbiophysics`; sections 3, 4.1), mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
+In contrast, in the lower canopy, greater RH (reduced VPD) and lower wind speeds (reduced $g_b$) may limit leaf cooling via latent heat flux, increasing $T_{leaf}$ [@perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+Leaves in these normally-shaded locations can experience rapid light and temperature surges during sunflecks [>10$^\circ$C, @waySunflecksTreesForests2012].
 
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf characteristic dimension, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under hypothetical moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Dots along each line correspond to the biophysical constant assigned for the independent variable in the other scenarios, and therefore represent the modeled value for $T_{Leaf}-T_{air}$ with all parameters set to the biophysical constants given in the table. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), leaf characteristic dimension (lcd), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
@@ -245,11 +245,11 @@ In addition to lower wind speeds, higher RH (lower VPD) in the understory and in
 
 Vertical $T_{leaf}$ gradients also vary with canopy structure (Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`). 
 Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most incoming radiation and preventing vertical air mixing in the understory. 
-Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than lower-canopy leaves, in some cases exceeding photosynthetic temperature optima ($T_{opt}$) because of $g_s$ limitation and high radiation [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999;-->@doughtyAreTropicalForests2008; <!--@fauset_differences_2018;--> @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021 <!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
+Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than lower-canopy leaves, in some cases exceeding photosynthetic temperature optima ($T_{opt}$) because of $g_s$ limitation and high radiation [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999;-->@doughtyAreTropicalForests2008; <!--@fauset_differences_2018;--> @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021<!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
 In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory, which can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [<!--@hadleyInfluenceKrummholzMat1987--> @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
-The latter can result from a combination of still air at lower heights, and sunflecks or the 'canopy greenhouse effect' [section 1.5, @schymanskiStomatalControlLeaf2013; @hardwickRelationshipLeafArea2015], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
-Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing $T_{leaf}$ of foliage near the ground [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVerticalinpress]. 
-One of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense subalpine stand in the alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
+The latter can result from a combination of still air at lower heights, sunflecks or the 'canopy greenhouse effect' (section 1.5), and the tendency for shade leaves to have lower $g_s$ [section 3, @schymanskiStomatalControlLeaf2013; @hardwickRelationshipLeafArea2015]. 
+Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing $T_{leaf}$ near the ground [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVerticalinpress]. 
+One of the few studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense subalpine stand in the alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
 However, the opposite trend was observed for a lone tree surrounded by grass in a California open oak woodland, with cooler temperatures at the top of the crown, indicating a strong influence of closed-canopy shading on vertical temperature gradients [@johnstonWhatLiesVerticalinpress]. 
 
 ## 3. Leaf traits 
