--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -184,10 +184,10 @@ In this review, we focus on growing season conditions unless otherwise noted.
 ### 1.2 Light
 
 The intensity of visible and photosynthetically active radiation (PAR, 400-700nm) decreases from the canopy top to the forest floor, with a profile whose shape is modified by leaf area density, leaf clumping, canopy height, and vertical structure across species and forest types [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001; @belandVerticalStructureHeterogeneity2021;  @binLeafTraitExpression2022].
-Canopy foliage absorbs a large portion of PAR (400-700nm), and selectively filters light, thereby altering the spectrum of PAR creceived in the lower canopy and understory layers. 
-The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along qith total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation [700-1000 nm, @decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
+Canopy foliage absorbs a large portion of PAR (400-700nm), and selectively filters light, thereby altering the spectrum of PAR received in the lower canopy and understory layers. 
+The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along with total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation [700-1000 nm, @decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
-This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests, than in forests with more open upper canopies, including many conifer forests [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests, than in forests with more open upper canopies, including many conifer forests [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; <!--@aussenacInteractionsForestStands2000a-->; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 This light gradient drives variation in leaf temperature (section 2), traits (section 3), and photosynthesis (section 4.2).
 
 ### 1.3 Turbulent transport and wind
@@ -204,7 +204,7 @@ As a result, upper canopy leaves have substantially higher boundary layer conduc
 
 ### 1.4 Atmospheric concentrations of CO~2~ and water vapor
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, but the elevated CO~2~ quickly dissipates during the day such that differences are negligible for most of the day when photosynthesis is occurring [@koike_leaf_2001; @yang_spatial_1999; @brooksVerticalGradientsPhotosynthetic1997]. 
-While understory seedlings may benefit modestly from higher CO~2~ concentrations near the ground during some parts of the day [e.g., 6% of C fixation from recently respired CO~2~; @brooksVerticalGradientsPhotosynthetic1997], gradients in CO~2~ concentrations concentrations likely have little effect on energy balance and metabolism of trees across the vertical gradient [@brooksVerticalGradientsPhotosynthetic1997]. 
+While understory seedlings may benefit modestly from higher CO~2~ concentrations near the ground during some parts of the day [e.g., 6% of C fixation from recently respired CO~2~, @brooksVerticalGradientsPhotosynthetic1997], gradients in CO~2~ concentrations concentrations likely have little effect on energy balance and metabolism of trees across the vertical gradient [@brooksVerticalGradientsPhotosynthetic1997]. 
  
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, @juckerCanopyStructureTopography2018; <!--@mcgregorTreeHeightLeaf2021;-->@binLeafTraitExpression2022].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
