I thought this was a mistake, because the words are repeating

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -254,7 +254,7 @@ However, the opposite trend was observed for a lone tree surrounded by grass in 
 
 ## 3. Leaf traits 
 
-Anatomical, structural and biochemical leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping vertical profiles of leaf temperature, metabolism, and thermal sensitivity [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a; @zwienieckiHydraulicLimitationsImposed2004]. 
+Anatomical, structural and biochemical leaf traits vary vertically across forest strata [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping vertical profiles of leaf temperature, metabolism, and thermal sensitivity [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a; @zwienieckiHydraulicLimitationsImposed2004]. 
 Vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for over a century [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928].
 Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade1968], and this tendency grew given the parallel differences observed for plants grown in sun versus shade [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990].
 More recent work has extended the focus from light alone to leaf height, as the latter shapes differences in leaf structure and function that can partially mitigate the effects of gravity and hydraulic pathlength on leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
